crates/swc_ecma_parser/tests/jsx/errors/issue-11650/input.js
<if-\u{2F804}></if-\u{2F804}>
